--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "simplebar-react": "^3.2.4",
     "sortablejs": "^1.15.0",
     "swiper": "^10.0.4",
+    "xlsx": "^0.18.5",
     "yup": "^1.2.0"
   },
   "devDependencies": {
