--- a/package.json
+++ b/package.json
@@ -21,15 +21,14 @@
     "@headlessui-float/react": "^0.11.2",
     "@headlessui/react": "^1.7.15",
     "@hookform/resolvers": "^3.1.1",
+    "@react-google-maps/api": "^2.20.6",
     "@reduxjs/toolkit": "^1.9.5",
     "@tippyjs/react": "^4.2.6",
-    "antd": "^5.23.2",
+    "antd": "^5.23.4",
     "apexcharts": "^3.41.0",
-    "axios": "^0.21.1",
-    "axios-mock-adapter": "^1.19.0",
+    "axios": "^1.7.9",
     "chart.js": "^4.3.0",
     "dayjs": "^1.11.9",
-    "google-maps-react": "^2.0.6",
     "gridjs": "^6.0.6",
     "gridjs-react": "^6.0.1",
     "jsvectormap": "1.3.2",
